# rust-todo-list

./: .gitignore  License  README.md
client/: Cargo.toml  Makefile.toml  index.html  package.json  tailwind.config.js
client/src/: app.rs  lib.rs  main.rs
client/src/components/: checkbox.rs  mod.rs  text_field.rs
client/src/entities/: todo.rs
client/src/pages/: mod.rs  todo.rs  todo_form.rs  todo_list.rs
client/src/services/: todo.rs
client/src/styles/: output.css
client/src/utils/: are_similar.rs  format_bool.rs  format_date.rs  mod.rs  parse_date.rs
server/: Cargo.toml
server/src/: main.rs
server/src/controllers/: todo.rs
server/src/db/: todos.json
server/src/entities/: error.rs  mod.rs  success.rs  todo.rs
server/src/repositories/: todo.rs
server/src/services/: create_todo.rs  delete_todo.rs  edit_todo.rs  get_todo_by_id.rs  get_todos.rs  mod.rs
server/src/utils/: file.rs  json.rs  mod.rs
