[package]
name = "rust-todo-list-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
chrono = {version = "0.4.23", features = ["serde"]}
uuid = {version = "1.3.0", features = ["serde", "v4"]}